Sets up folder structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Talentree - Build your talent
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/index.css"/>
+    <script src="frameworks/jquery.js"></script>
+    <script src="js/index.js"></script>
+</head>
+<body>
+
+<h1>Talentree - Build your talent</h1>
+<p>CSS is working. Click me to check JS</p>
+
+</body>
+</html>
