creats header section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
     <script src="js/index.js"></script>
 </head>
 <body>
+    <section class="header">
+        <ul class="header__nav">
+            <li class="header__link">Features</li>
+            <li class="header__link">Pricing</li>
+            <li class="header__link">Resources</li>
+        </ul>
+        <div class="header__logo">
+            <img src="assets/logo.svg" alt="Logo Image"/>
+        </div>
+        <ul class="header__acc">
+            <li class="header__link">Log In</li>
+            <li class="header__link--action">Get Started</li>
+            <form class="header__search">
+                <input type="text" name="search" onfocusout="this.value=''">
+            </form>
+        </ul>
+        
 
-<h1>Talentree - Build your talent</h1>
-<p>CSS is working. Click me to check JS</p>
+    </section>
+<!-- <h1>Talentree - Build your talent</h1>
+<p>CSS is working. Click me to check JS</p> -->
 
 </body>
 </html>
