--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         
 
     </section>
+
+    <section class="intro">
+        <div class="intro__info">
+            <h2>PEOPLE MANAGEMENT SOFTWARE</h2>
+            <h1>Full-circle HR Platform for Everyone in Your Company.</h1>
+            <p>It’s the HR software that makes everyone happier. From candidate mangement, payroll to annual performance review, Talentree has it all.</p>
+            <div class="intro__link--action">Get Started</div>
+            <div class="ball intro__ball--orange"></div>
+            <div class="ball intro__ball--purple"></div>
+        </div>
+        <img class="intro__image" src="assets/intro_women_group.svg" alt="Image of happy women in a group"/>
+    </section>
 <!-- <h1>Talentree - Build your talent</h1>
 <p>CSS is working. Click me to check JS</p> -->
 
