Import fonts and update styles to use fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>Talentree</title>
     <link rel="stylesheet" href="css/index.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Quicksand:500&display=swap" rel="stylesheet">
     <script src="frameworks/jquery.js"></script>
     <script src="js/index.js"></script>
 </head>
@@ -24,7 +26,7 @@
                 <input type="text" name="search" onfocusout="this.value=''">
             </form>
         </ul>
-        
+
 
     </section>
 
@@ -34,7 +36,7 @@
                 <div class="ball ball__orange"></div>
                 <div class="ball ball__purple"></div>
             </div>
-            <h2>PEOPLE MANAGEMENT SOFTWARE</h2>
+            <span>PEOPLE MANAGEMENT SOFTWARE</span>
             <h1>Full-circle HR Platform for Everyone in Your Company.</h1>
             <p>It’s the HR software that makes everyone happier. From candidate mangement, payroll to annual performance review, Talentree has it all.</p>
             <div class="intro__link--action">Get Started</div>
