Create footer and styles for footer
This change also includes body background changes.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <section class="header">
+    <header class="header">
         <ul class="header__nav">
             <li class="header__link">Features</li>
             <li class="header__link">Pricing</li>
             <li class="header__link">Resources</li>
         </ul>
-        <div class="header__logo">
+        <div class="logo">
             <img src="assets/logo.svg" alt="Logo Image"/>
         </div>
         <ul class="header__acc">
@@ -28,7 +28,7 @@
         </ul>
 
 
-    </section>
+    </header>
 
     <section class="intro">
         <div class="intro__info">
@@ -43,8 +43,17 @@
         </div>
         <img class="intro__image" src="assets/intro_women_group.svg" alt="Image of happy women in a group"/>
     </section>
-<!-- <h1>Talentree - Build your talent</h1>
-<p>CSS is working. Click me to check JS</p> -->
+
+    <footer class="footer">
+        <img class="logo" src="./assets/logo.svg" alt="Talentree logo">
+        <p class="footer__content">HR made simple with Talentree, a platform that helps your company with everything HR related from hiring to benefits.</p>
+        <div class="footer__social">
+            <a href="#"><img src="./assets/facebook.svg" alt="Facebook logo"></a>
+            <a href="#"><img src="./assets/instagram.svg" alt="Facebook logo"></a>
+            <a href="#"><img src="./assets/linkedin.svg" alt="Facebook logo"></a>
+            <a href="#"><img src="./assets/ twitter.svg" alt="Facebook logo"></a>
+        </div>
+    </footer>
 
 </body>
 </html>
