Create Blog Showcase component

--- a/index.html
+++ b/index.html
@@ -49,38 +49,61 @@
             <div class="ball ball__yellow"></div>
         </div>
     </div>
-    
+
     <section class="features">
-        
+
         <div class="title">
             <div class="title__highlight">CORE FEATURES</div>
-            <div class="title__header">All-in-one HR Platform</div> 
-        </div> 
+            <div class="title__header">All-in-one HR Platform</div>
+        </div>
         <div class="feature__items">
             <div class="feature__item">
                 <div class="feature__shape feature__shape--blue"></div>
-                <div class="feature__head">Recruiting</div>  
-                <div class="feature__content">End-to-end recruiting software to help you attract more applicants, stay organized, and consistently hire great employees.</div>        
+                <div class="feature__head">Recruiting</div>
+                <div class="feature__content">End-to-end recruiting software to help you attract more applicants, stay organized, and consistently hire great employees.</div>
             </div>
             <div class="feature__item">
                 <div class="feature__shape feature__shape--green"></div>
-                <div class="feature__head">On-boarding</div>  
-                <div class="feature__content">Ditch the paperwork, give a great first impression, and digitally collect the HR and payroll information you need before day one.</div>        
+                <div class="feature__head">On-boarding</div>
+                <div class="feature__content">Ditch the paperwork, give a great first impression, and digitally collect the HR and payroll information you need before day one.</div>
             </div>
             <div class="feature__item">
                 <div class="feature__shape feature__shape--yellow"></div>
-                <div class="feature__head">Performance</div>  
-                <div class="feature__content">Create paperless custom reviews and collect feedback from managers, employees, and peers.</div>        
+                <div class="feature__head">Performance</div>
+                <div class="feature__content">Create paperless custom reviews and collect feedback from managers, employees, and peers.</div>
             </div>
             <div class="feature__item">
                 <div class="feature__shape feature__shape--orange"></div>
-                <div class="feature__head">Benefits</div>  
-                <div class="feature__content">Manage benefits and pension enrollment using one HR platform that synce with payroll and others. </div>        
-            </div>     
+                <div class="feature__head">Benefits</div>
+                <div class="feature__content">Manage benefits and pension enrollment using one HR platform that synce with payroll and others. </div>
+            </div>
         </div>
     </section>
-<!-- <h1>Talentree - Build your talent</h1>
-<p>CSS is working. Click me to check JS</p> -->
+
+    <section class="blog-showcase">
+        <span class="tag">Blogs</span>
+        <h2 class="blog-showcase__header">HR Tips & Tricks</h2>
+        <div class="blog-showcase__grid">
+            <a class="blog-showcase__container" href="#">
+                <img src="./assets/laptop.png" alt="Laptop">
+                <div class="blog-showcase__container__content">
+                    <p>How to create a candidates experience map</p>
+                </div>
+            </a>
+            <a class="blog-showcase__container" href="#">
+                <img src="./assets/businesspeople.png" alt="Business People">
+                <div class="blog-showcase__container__content">
+                    <p>Five must-ask interview questions</p>
+                </div>
+            </a>
+            <a class="blog-showcase__container" href="#">
+                <img src="./assets/brainstorming.png" alt="Brainstorming">
+                <div class="blog-showcase__container__content">
+                    <p>10-ways to increase employee engagement</p>
+                </div>
+            </a>
+        </div>
+    </section>
 
     <footer class="footer">
         <img class="logo" src="./assets/logo.svg" alt="Talentree logo">
