create saving section

--- a/index.html
+++ b/index.html
@@ -79,8 +79,24 @@
             </div>     
         </div>
     </section>
-<!-- <h1>Talentree - Build your talent</h1>
-<p>CSS is working. Click me to check JS</p> -->
+    <div class="text--container">
+        <div class="text text--saving">Easy</div>
+    </div>
+    <section class="features features--saving">
+        <div class="intro__image--container">
+            <div class="ball--static ball__green"></div>
+            <img class="intro__image" src="assets/features_man_with_letters.svg" alt="Image of happy women in a group"/>
+        </div>
+        <div class="intro__info intro__info--saving">
+            <div class="title title--saving">
+                <div class="title__highlight">SAVE TIME & MONEY</div>
+                <div class="title__header title__header--saving">Quit switching between a million platforms </div>
+                <p>Talentree is a complete HR, benefits, and payroll solution designed to help you seamlessly manage your employees.</p> 
+            </div> 
+            <div class="intro__link--action">Get Started</div>
+        </div>
+        
+    </section>
 
     <footer class="footer">
         <img class="logo" src="./assets/logo.svg" alt="Talentree logo">
