Add balls to Newsletter and add scrolling affect

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Quicksand:500&display=swap" rel="stylesheet">
     <script src="frameworks/jquery.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/parallax.js"></script>
 </head>
 <body>
 
@@ -92,6 +93,18 @@
                 <button class="button button--orange" type="submit">Get Started</button>
             </form>
         </div>
+        <div
+            class="new-ball new-ball--yellow new-ball--l"
+            data-scroll="0.05"
+        ></div>
+        <div
+            class="new-ball new-ball--orange new-ball--m"
+            data-scroll="0.10"
+        ></div>
+        <div
+            class="new-ball new-ball--green new-ball--s"
+            data-scroll="0.15"
+        ></div>
     </section>
 
     <section class="blog-showcase">
