Create Plans component

--- a/pricing.html
+++ b/pricing.html
@@ -34,6 +34,7 @@
       </ul>
   </nav>
 
+  <!-- Header -->
   <header class="intro">
       <div class="intro__info">
           <div class="ball__container ball__container--info">
@@ -50,6 +51,71 @@
       </div>
       <img class="intro__image" src="assets/intro_women_group.svg" alt="Image of happy women in a group"/>
   </header>
+
+  <!-- Plans -->
+  <section class="plans">
+    <div class="plans__grid">
+      <div class="plans__plan-container">
+        <h2>Basics</h2>
+        <ul>
+          <li>< 5 Employees</li>
+          <div class="divider"></div>
+          <li>Time-off tracking, Performance reviews & check-ins</li>
+          <div class="divider"></div>
+          <li>CPP, EI, WSIB, calcualtions, Year-end T4s, T4As, RL-1s</li>
+          <div class="divider"></div>
+        </ul>
+        <a href="#" class="button button--orange button--big">Get Started</a>
+        <div
+            class="new-ball new-ball--blue new-ball--blue--glow new-ball--sm"
+            data-scroll="0"
+        ></div>
+      </div>
+      <div class="plans__plan-container">
+        <h2>Pro</h2>
+        <ul>
+          <li>< 20 Employees</li>
+          <div class="divider"></div>
+          <li>All of the features the Basics Plan offers</li>
+          <div class="divider"></div>
+          <li>Automated payroll calculation and processing, Custom payroll reports</li>
+          <div class="divider"></div>
+        </ul>
+        <a href="#" class="button button--orange button--big">Get Started</a>
+        <div
+            class="new-ball new-ball--green new-ball--green--glow new-ball--sm"
+            data-scroll="0"
+        ></div>
+      </div>
+      <div class="plans__plan-container">
+        <h2>Enterprise</h2>
+        <ul>
+          <li>< 100 Employees</li>
+          <div class="divider"></div>
+          <li>All of the features the Basics & Pro Plans offer</li>
+          <div class="divider"></div>
+          <li>Dedicated payroll manager & Dedicated account manager</li>
+          <div class="divider"></div>
+        </ul>
+        <a href="#" class="button button--orange button--big">Get Started</a>
+        <div
+            class="new-ball new-ball--yellow new-ball--yellow--glow new-ball--sm"
+            data-scroll="0"
+        ></div>
+      </div>
+      <div class="plans__plan-container">
+        <h2>Custom</h2>
+        <ul>
+          <li>Looking for something specific? We can create a plan that work for you and your team.</li>
+        </ul>
+        <a href="#" class="button button--orange button--big">Get Started</a>
+        <div
+            class="new-ball new-ball--purple new-ball--purple--glow new-ball--sm"
+            data-scroll="0"
+        ></div>
+      </div>
+    </div>
+  </section>
 
     <footer class="footer">
         <img class="logo" src="./assets/logo.svg" alt="Talentree logo">
