Create Modal component

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
             </li>
         </ul>
         <div class="logo">
-            <img src="assets/logo.svg" alt="Logo Image"/>
+            <a href="index.html">
+                <img src="assets/logo.svg" alt="Logo Image"/>
+            </a>
         </div>
         <ul class="header__acc">
-            <li class="header__link">Log In</li>
-            <a href="" class="button">Get Started</a>
+            <li class="header__link">
+                <a href="#" modal="login">Log In</a>
+            </li>
+            <button class="button" modal="signup">Get Started</button>
             <form class="header__search">
                 <input type="text" name="search" onfocusout="this.value=''">
             </form>
@@ -41,7 +45,7 @@
             <span class="tag">PEOPLE MANAGEMENT SOFTWARE</span>
             <h1>Full-circle HR Platform for Everyone in Your Company.</h1>
             <p>It’s the HR software that makes everyone happier. From candidate mangement, payroll to annual performance review, Talentree has it all.</p>
-            <a href="#" class="button">Get Started</a>
+            <a href="#" class="button" modal="signup">Get Started</a>
         </div>
         <img class="intro__image" src="assets/intro_women_group.svg" alt="Image of happy women in a group"/>
     </header>
@@ -95,7 +99,7 @@
                 <div class="title__header title__header--saving">Quit switching between a million platforms </div>
                 <p>Talentree is a complete HR, benefits, and payroll solution designed to help you seamlessly manage your employees.</p>
             </div>
-            <a href="#" class="button">Get Started</a>
+            <a href="#" class="button" modal="signup">Get Started</a>
         </div>
 
     </section>
@@ -136,26 +140,26 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="button button--more">Learn More</a>
+        <a href="pricing.html" class="button button--more">Learn More</a>
         <div class="ball__container ball__container--pricing--left">
             <div class="ball ball__yellow ball__yellow--pricing"></div>
         </div>
     </section>
 
-    <section class="features features--saving">     
+    <section class="features features--saving">
         <div class="intro__info intro__info--saving intro__info--management">
             <div class="title title--saving">
                 <div class="title__highlight">PEOPLE MANAGEMENT</div>
                 <div class="title__header title__header--saving">21st Century HR Management</div>
-                <p>Happy employees, happy HR, successfull company. Create better connections within your company. Start today with Talentree.</p> 
-            </div> 
-            <a href="#" class="button">Get Started</a>
+                <p>Happy employees, happy HR, successfull company. Create better connections within your company. Start today with Talentree.</p>
+            </div>
+            <a href="#" class="button" modal="signup">Get Started</a>
         </div>
         <div class="intro__image--container intro__image--container--management">
             <div class="ball--static ball__green ball__blue--management"></div>
             <img class="intro__image" src="assets/checklist.svg" alt="Image of a woman standing beside a checklist"/>
         </div>
-        
+
     </section>
     <div class="text--container">
         <div class="text">Secure</div>
@@ -224,9 +228,86 @@
         </div>
     </footer>
 
+    <!-- Modal -->
+    <dialog class="modal">
+        <div class="modal__backdrop"></div>
+        <div class="modal__container">
+            <div class="modal__login">
+                <form action="">
+                    <label for="username">User Name</label>
+                    <input
+                        type="text"
+                        id="username"
+                        class="input--modal"
+                        required
+                        minlength="4"
+                    >
+                    <label for="password">Password</label>
+                    <input
+                        type="password"
+                        id="password"
+                        class="input--modal"
+                        required
+                        minlength="8"
+                    >
+                    <a href="#" class="info">Forgot Password</a>
+                    <button class="button button--orange button--big">Login</button>
+                </form>
+            </div>
+            <div class="modal__signup">
+                <form action="">
+                    <label for="firstname">First Name</label>
+                    <input
+                        type="text"
+                        id="firstname"
+                        class="input--modal"
+                        required
+                    >
+                    <label for="lastname">Last Name</label>
+                    <input
+                        type="text"
+                        id="lastname"
+                        class="input--modal"
+                        required
+                    >
+                    <label for="email">Work Email</label>
+                    <input
+                        type="email"
+                        id="email"
+                        class="input--modal"
+                        required
+                    >
+                    <label for="company">Company Name</label>
+                    <input
+                        type="text"
+                        id="company"
+                        class="input--modal"
+                        required
+                    >
+                    <button class="button button--orange button--big">Login</button>
+                    <a href="#" class="info">Already have an account? Log in here.</a>
+                </form>
+            </div>
+            <div class="modal__forgot-password">
+                <form action="">
+                    <p>Please enter the email address associated with your Talentree account. If you don't remember the email address you used to register, please contact our support team</p>
+                    <label for="username">User Name</label>
+                    <input
+                        type="text"
+                        id="username"
+                        class="input--modal"
+                        required
+                    >
+                    <button class="button button--orange button--big">Login</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
+
     <!-- Scripts -->
     <script src="frameworks/jquery.js"></script>
     <script src="js/index.js"></script>
     <script src="js/parallax.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
