--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class="logo">
             <img src="assets/logo.svg" alt="Logo Image"/>
         </div>
+        <div class="header__nav--mobile"></div>
+        <img class="header__icon--mobile" src="assets/nav_icon.svg" alt="Icon for mobile navigation bar"/>
         <ul class="header__acc">
             <li class="header__link">Log In</li>
             <a href="" class="button">Get Started</a>
@@ -30,7 +32,21 @@
                 <input type="text" name="search" onfocusout="this.value=''">
             </form>
         </ul>
+        <div class="header__cover--mobile"></div>
+        <ul class="header__acc header__acc--mobile">
+            <li class=" header__link header__link--mobile">
+                <a href="features.html">Features</a>
+            </li>
+            <li class="header__link header__link--mobile">
+                <a href="pricing.html">Pricing</a>
+            </li>
+            <li class="header__link header__link--mobile">
+                <a href="#" modal="login">Log In</a>
+            </li>
+            <a href="" class="button button--mobile">Get Started</a>
+        </ul>
     </nav>
+   
 
     <header class="intro">
         <div class="intro__info">
