--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Talentree</title>
     <!-- TODO: Missing description -->
 
@@ -166,7 +167,7 @@
     </div>
 
     <section class="features">
-            
+
         <div class="title">
             <div class="title__highlight">TESTIMONIALS</div>
             <div class="title__header">They love it, you will too!</div>
