Add favicon and create mobile blog showcase component

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Talentree</title>
     <!-- TODO: Missing description -->
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./assets//favicon.png">
+
     <link rel="stylesheet" href="css/index.css"/>
     <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Quicksand:500&display=swap" rel="stylesheet">
 </head>
@@ -53,7 +56,7 @@
             <a href="" class="button button--mobile">Get Started</a>
         </ul>
     </nav>
-   
+
 
     <header class="intro">
         <div class="intro__info">
